--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -124,7 +124,7 @@ jobs:
         EOF
 
     # =========================
-    # 🚀 4. Update ECS Service to use latest Docker Images
+    # 🚀 4. Update ECS Service to use Latest Docker Images
     # =========================
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
